Change to hardcoded path for background image

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -81,7 +81,8 @@
   justify-content: center;
   text-align: center;
   background-color: #1a3a5c;
-  background-image: url('/assets/images/hero-banner.jpg');  // ← add your hero photo
+#  background-image: url('/assets/images/hero-banner.jpg');  // ← add your hero photo
+  background-image: url('/reids-unzipped/assets/images/hero-banner.jpg');  
   background-size: cover;
   background-position: center 40%;
   overflow: hidden;
