--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -407,3 +407,26 @@
     color: #ffffff !important;
   }
 }
+
+
+// =============================================================================
+// Adding to align left better
+// =============================================================================
+
+// Force full-width layout
+.initial-content {
+  margin-left: 0 !important;
+}
+
+#main {
+  float: none !important;
+  width: 100% !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+.page {
+  float: none !important;
+  width: 100% !important;
+  padding-right: 0 !important;
+}
